2010-10-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-update-info): Ignore groups that have no UIDNEXT
	values.  This sometimes happens on some groups that have no info.
	(nnimap-request-newgroups): New function.

2010-10-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-install-nnregistry): Move the feature
	check into `gnus-registry-initialize'.
	(gnus-registry-initialize): Ditto.
	Fix and extend header docs.

2010-10-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-prefetch-images): Adjust regexp to avoid
	regexp backtrace overflows.

	* nnimap.el (nnimap-extend-tls-programs): Only extend those programs
	for starttls that tls.el implements; i.e. openssl.

	* tls.el (tls-starttls-switches): Give up on using starttls with
	gnutls-cli.
	(tls-program): Add --insecure to be consistent with the defaults from
	openssl s_client.  Now all three commands are insecure.

2010-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Bind completion-styles-alist for XEmacs.

	* gravatar.el: Don't load image.el that XEmacs doesn't provide.
	(gravatar-create-image): New function that's an alias to
	gnus-xmas-create-image, gnus-create-image, or create-image.
	(gravatar-data->image): Use it.

2010-09-30  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-install-nnregistry): New function to
	install the nnregistry refer method.
	(gnus-registry-install-hooks): Use it.
	(gnus-registry-unfollowed-groups): Add nnmairix to the default
	unfollowed groups.

2010-09-30  Jose A. Ortega Ruiz  <jao@gnu.org>  (tiny change)

	* gnus-sum.el (gnus-summary-show-thread): Skip past invisible text when
	expanding threads.

2010-09-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnir.el: Use the server names without suffixes (bug #7009).

	* nnimap.el (nnimap-open-connection): Reinstate the auto-upgrade from
	unencrypted to STARTTLS, if possible.

2010-09-30  Teemu Likonen  <tlikonen@iki.fi>  (tiny change)